# snap

./: README.md
.github/workflows/: release-windows.yml
app/src-tauri/: Cargo.toml
app/src-tauri/src/: lib.rs  main.rs
